# hybrid_robot

hybrid_robot_ws/: .gitignore  README.md  create_octomap.py
hybrid_robot_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
hybrid_robot_ws/install/hybrid_robot_description/share/hybrid_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
hybrid_robot_ws/install/hybrid_robot_description/share/hybrid_robot_description/cmake/: hybrid_robot_descriptionConfig-version.cmake  hybrid_robot_descriptionConfig.cmake
hybrid_robot_ws/install/hybrid_robot_description/share/hybrid_robot_description/environment/: path.dsv  (+1 more)
hybrid_robot_ws/log/: latest_build
hybrid_robot_ws/src/hybrid_robot_description/: CMakeLists.txt
hybrid_robot_ws/src/hybrid_robot_description/config/: nav2_params.yaml  terrestrial_control.yaml
hybrid_robot_ws/src/hybrid_robot_description/launch/: launch_world.launch.py
hybrid_robot_ws/src/hybrid_robot_description/map/: forest_map.pgm  forest_map.yaml  map_blanco.pgm  slalom_map.pgm  slalom_map.yaml  storage_map.pgm  storage_map.xcf  storage_map.yaml
hybrid_robot_ws/src/hybrid_robot_description/scripts/: rrt.py  rrt_planner_node.py  test_sequence_node_3D.py
hybrid_robot_ws/src/hybrid_robot_description/urdf/: hybrid_aerial.xacro  hybrid_robot.xacro  hybrid_terrestrial.xacro
hybrid_robot_ws/src/hybrid_robot_description/worlds/: forest_map.world  hybrid_forest.world  hybrid_map.world  slalom_map.world  storage_map.world
(+11 files in other folders)
